# autoclicker

./: .Cargo.toml.kate-swp  Cargo.toml  README.md  install.sh
src/: clicker.rs  hotkey.rs  ipc.rs  keymap.rs  main.rs  ui.rs
