[package]
name = "autoclicker"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
evdev = { version = "0.12", default-features = false }
clap = { version = "4", features = ["derive"] }
async-channel = "2.3"
ksni = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
